--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -17,9 +17,20 @@ keywords:
   - phantomjs
   - karma
 script: |
-  sudo apt-get install git build-essential g++ flex bison gperf ruby perl \
-  libsqlite3-dev libfontconfig1-dev libicu-dev libfreetype6 libssl-dev \
-  libpng-dev libjpeg-dev
+  sudo apt-get install git
+  sudo apt-get install g++
+  sudo apt-get install flex
+  sudo apt-get install bison
+  sudo apt-get install gperf
+  sudo apt-get install ruby
+  sudo apt-get install perl
+  sudo apt-get install libsqlite3-dev
+  sudo apt-get install libfontconfig1-dev
+  sudo apt-get install libicu-dev
+  sudo apt-get install libfreetype6
+  sudo apt-get install libssl-dev
+  sudo apt-get install libpng-dev
+  sudo apt-get install libjpeg-dev
   git clone git://github.com/ariya/phantomjs.git
   cd phantomjs
   git checkout 2.0
