--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -18,6 +18,7 @@ keywords:
   - karma
 script: |
   sudo apt-get install git
+  sudo apt-get install build-essential
   sudo apt-get install g++
   sudo apt-get install flex
   sudo apt-get install bison
